implemented gestures for zoom and proper scroll cards for options (max/reset zoom, overlay on/off, exit)

--- a/app/src/main/res/menu/cam_menu.xml
+++ b/app/src/main/res/menu/cam_menu.xml
@@ -1,21 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/zoom_in"
-        android:title="In zoom"/>
+        android:title="Zoom more"/>
 
     <item android:id="@+id/zoom_out"
-        android:title="Out zoom"/>
+        android:title="Zoom less"/>
 
-    <item android:id="@+id/zoom_max"
-          android:title="Max zoom"/>
+    <item android:id="@+id/zoom_toggle"
+          android:title="Toggle maxzoom"/>
 
-    <item android:id="@+id/zoom_reset"
-          android:title="Reset zoom"/>
-
-    <item android:id="@+id/show_overlay"
-          android:title="Show overlay"/>
-
-    <item android:id="@+id/hide_overlay"
-          android:title="Hide overlay"/>
+    <item android:id="@+id/toggle_overlay"
+          android:title="Toggle overlay"/>
 
     <item android:id="@+id/take_picture"
           android:title="Take a picture"/>
@@ -25,12 +19,6 @@
 
     <item android:id="@+id/stop_video"
           android:title="Stop video"/>
-
-    <item android:id="@+id/mode_video"
-          android:title="Video mode"/>
-
-    <item android:id="@+id/mode_camera"
-          android:title="Camera mode"/>
 
     <item android:id="@+id/close_app"
           android:title="Close"/>
