--- a/app/src/main/res/layout/preview_layout.xml
+++ b/app/src/main/res/layout/preview_layout.xml
@@ -8,7 +8,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Zoom"
+            android:text=""
             android:id="@+id/zoom"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"/>
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Mode"
+            android:text=""
             android:id="@+id/mode"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"/>
