--- a/app/src/main/res/layout/preview_layout.xml
+++ b/app/src/main/res/layout/preview_layout.xml
@@ -2,30 +2,41 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
+        android:layout_gravity="center_horizontal"
+    >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text=""
+            android:text="@string/zoom"
             android:id="@+id/zoom"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text=""
-            android:id="@+id/mode"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"/>
-
-        <TextureView
+    <TextureView
             android:layout_width="wrap_content"
             android:layout_height="477dp"
             android:id="@+id/preview"
-            android:layout_alignEnd="@+id/mode"
-            android:layout_below="@+id/zoom"/>
-    </RelativeLayout>
+            android:layout_below="@+id/zoom"
+            android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:id="@+id/location"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/zoom"
+        android:text="@string/location"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:id="@+id/autoSave"
+        android:text="@string/save"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/location"/>
+
+</RelativeLayout>
