--- a/app/src/main/res/menu/taken_menu.xml
+++ b/app/src/main/res/menu/taken_menu.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/delete_this"
-          android:title="Delete this"/>
+    <item android:id="@+id/save_this"
+          android:title="@string/save"/>
 
     <item android:id="@+id/share_with"
-          android:title="Share this"/>
+          android:title="@string/share"/>
 
     <item android:id="@+id/back"
-          android:title="Back"/>
+          android:title="@string/back"/>
 </menu>
