--- a/app/src/main/res/menu/cam_menu.xml
+++ b/app/src/main/res/menu/cam_menu.xml
@@ -7,33 +7,15 @@
 
     <item android:id="@+id/options" android:title="@string/options">
         <menu>
-            <item android:id="@+id/menu_location" android:title="@string/location">
-                <menu>
-                    <item android:id="@+id/location_on" android:title="@string/location_on"/>
-                    <item android:id="@+id/location_off" android:title="@string/location_off"/>
-                </menu>
-            </item>
-
-            <item android:id="@+id/menu_storage" android:title="@string/storage">
-                <menu>
-                    <item android:id="@+id/autosave_on" android:title="@string/autosave_on"/>
-                    <item android:id="@+id/autosave_off" android:title="@string/autosave_off"/>
-                </menu>
-            </item>
-
+            <item android:id="@+id/toggle_autosave" android:title="@string/toggle_autosave"/>
+            <item android:id="@+id/toggle_location" android:title="@string/toggle_location"/>
+            <item android:id="@+id/toggle_overlay" android:title="@string/toggle_overlay"/>
             <item android:id="@+id/menu_zoom" android:title="@string/zoom">
                 <menu>
-                    <item android:id="@+id/zoom_in" android:title="@string/in" />
-                    <item android:id="@+id/zoom_out" android:title="@string/out" />
-                    <item android:id="@+id/zoom_max" android:title="@string/max" />
-                    <item android:id="@+id/zoom_reset" android:title="@string/reset" />
-                </menu>
-            </item>
-
-            <item android:id="@+id/menu_overlay" android:title="@string/overlay">
-                <menu>
-                    <item android:id="@+id/overlay_on" android:title="@string/overlay_on" />
-                    <item android:id="@+id/overlay_off" android:title="@string/overlay_off" />
+                    <item android:id="@+id/zoom_in" android:title="@string/zoom_in" />
+                    <item android:id="@+id/zoom_out" android:title="@string/zoom_out" />
+                    <item android:id="@+id/zoom_toggle_max" android:title="@string/toggle_max_zoom"/>
+                    <item android:id="@+id/zoom_toggle_smooth" android:title="@string/toggle_smooth_zoom"/>
                 </menu>
             </item>
         </menu>
