--- a/app/src/main/res/menu/taken_menu.xml
+++ b/app/src/main/res/menu/taken_menu.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/save_this"
+    <item android:id="@+id/save"
           android:title="@string/save"/>
 
-    <item android:id="@+id/share_with"
+    <item android:id="@+id/share"
           android:title="@string/share"/>
 
-    <item android:id="@+id/back"
-          android:title="@string/back"/>
+    <item android:id="@+id/discard"
+          android:title="@string/discard"/>
 </menu>
