videorecording is working, added low/high quality capture (both for images and video), default is hi

--- a/app/src/main/res/layout/overlay_layout.xml
+++ b/app/src/main/res/layout/overlay_layout.xml
@@ -37,6 +37,13 @@
                 android:src="@drawable/ic_angle_50"
                 android:scaleType="matrix"/>
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/qualityImage"
+                android:src="@drawable/ic_plus_50"
+                android:scaleType="matrix"/>
+
         </LinearLayout>
 
     <ImageView
