--- a/app/src/main/res/layout/overlay_layout.xml
+++ b/app/src/main/res/layout/overlay_layout.xml
@@ -6,7 +6,7 @@
 
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/linearLayout">
 
@@ -72,7 +72,25 @@
         android:id="@+id/modeImageView"
         android:src="@drawable/ic_camera_50"
         android:scaleType="matrix"
-        android:layout_above="@+id/zoomText"
+        android:layout_below="@+id/linearLayout"
+        android:layout_alignParentStart="true"/>
+
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/takenImageView"
+        android:visibility="gone"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:id="@+id/videoTimeText"
+        android:textColor="#ffffff"
+        android:visibility="gone"
+        android:layout_below="@+id/linearLayout"
         android:layout_alignParentEnd="true"/>
 
 </RelativeLayout>
