solved some threading issues, touch gestures are much easier (look at the readme)

--- a/app/src/main/res/layout/overlay_layout.xml
+++ b/app/src/main/res/layout/overlay_layout.xml
@@ -49,7 +49,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/takenResultImage"
+        android:id="@+id/statusImage"
         android:src="@drawable/ic_done_50"
         android:layout_gravity="center_horizontal"
         android:visibility="invisible"
